--- a/Driver/VirtualLightSensorDriver.vcxproj
+++ b/Driver/VirtualLightSensorDriver.vcxproj
@@ -25,6 +25,7 @@
     <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
     <SampleGuid>{5E23E5F0-A79D-451A-A6E3-AA8ECD5B1E10}</SampleGuid>
+    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -34,6 +35,7 @@
     <DriverType>UMDF</DriverType>
     <PlatformToolset>WindowsUserModeDriver10.0</PlatformToolset>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <Driver_SpectreMitigation>Spectre</Driver_SpectreMitigation>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <TargetVersion>Windows10</TargetVersion>
@@ -42,6 +44,7 @@
     <DriverType>UMDF</DriverType>
     <PlatformToolset>WindowsUserModeDriver10.0</PlatformToolset>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <Driver_SpectreMitigation>Spectre</Driver_SpectreMitigation>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetVersion>Windows10</TargetVersion>
@@ -50,6 +53,7 @@
     <DriverType>UMDF</DriverType>
     <PlatformToolset>WindowsUserModeDriver10.0</PlatformToolset>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <Driver_SpectreMitigation>Spectre</Driver_SpectreMitigation>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetVersion>Windows10</TargetVersion>
@@ -58,6 +62,7 @@
     <DriverType>UMDF</DriverType>
     <PlatformToolset>WindowsUserModeDriver10.0</PlatformToolset>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <Driver_SpectreMitigation>Spectre</Driver_SpectreMitigation>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <PropertyGroup>
@@ -76,34 +81,35 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" />
   </ImportGroup>
   <ItemGroup Label="WrappedTaskItems">
-    <Inf Include="SensorsComboDriver.inf">
+    <Inf Include="VirtualLightSensorDriver.inf">
       <Architecture>$(InfArch)</Architecture>
       <SpecifyArchitecture>true</SpecifyArchitecture>
-      <CopyOutput>.\$(IntDir)\SensorsComboDriver.inf</CopyOutput>
+      <CopyOutput>.\$(IntDir)\VirtualLightSensorDriver.inf</CopyOutput>
     </Inf>
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <TargetName>SensorsComboDriver</TargetName>
+    <TargetName>VirtualLightSensorDriver</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <TargetName>SensorsComboDriver</TargetName>
+    <TargetName>VirtualLightSensorDriver</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <TargetName>SensorsComboDriver</TargetName>
+    <TargetName>VirtualLightSensorDriver</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <TargetName>SensorsComboDriver</TargetName>
+    <TargetName>VirtualLightSensorDriver</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <TreatWarningAsError>true</TreatWarningAsError>
       <WarningLevel>Level4</WarningLevel>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(SDK_INC_PATH);$(DDK_INC_PATH)\sensors\1.1;$(SDK_INC_PATH)\sensors\1.1</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
-      <WppEnabled>true</WppEnabled>
-      <WppRecorderEnabled>true</WppRecorderEnabled>
+      <WppEnabled>false</WppEnabled>
+      <WppRecorderEnabled>false</WppRecorderEnabled>
       <WppScanConfigurationData>SensorsTrace.h</WppScanConfigurationData>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Midl>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM</PreprocessorDefinitions>
@@ -119,13 +125,14 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM=1</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <TreatWarningAsError>true</TreatWarningAsError>
       <WarningLevel>Level4</WarningLevel>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(SDK_INC_PATH);$(DDK_INC_PATH)\sensors\1.1;$(SDK_INC_PATH)\sensors\1.1</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
-      <WppEnabled>true</WppEnabled>
+      <WppEnabled>false</WppEnabled>
       <WppRecorderEnabled>true</WppRecorderEnabled>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Midl>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM</PreprocessorDefinitions>
@@ -146,6 +153,7 @@
       <WarningLevel>Level4</WarningLevel>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(SDK_INC_PATH);$(DDK_INC_PATH)\sensors\1.1;$(SDK_INC_PATH)\sensors\1.1</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Midl>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM</PreprocessorDefinitions>
@@ -166,6 +174,7 @@
       <WarningLevel>Level4</WarningLevel>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(SDK_INC_PATH);$(DDK_INC_PATH)\sensors\1.1;$(SDK_INC_PATH)\sensors\1.1</AdditionalIncludeDirectories>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Midl>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);_UNICODE;UNICODE;WPP_MACRO_USE_KM_VERSION_FOR_UM</PreprocessorDefinitions>
@@ -192,80 +201,35 @@
     <ClCompile Include="AlsClient.cpp">
       <WppEnabled>true</WppEnabled>
       <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="BarClient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
+      <WppModuleName>VirtualLightSensorDriver</WppModuleName>
       <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
     </ClCompile>
     <ClCompile Include="Clients.cpp">
       <WppEnabled>true</WppEnabled>
       <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
+      <WppModuleName>VirtualLightSensorDriver</WppModuleName>
       <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
     </ClCompile>
     <ClCompile Include="device.cpp">
       <WppEnabled>true</WppEnabled>
       <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
+      <WppModuleName>VirtualLightSensorDriver</WppModuleName>
       <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
     </ClCompile>
     <ClCompile Include="driver.cpp">
       <WppEnabled>true</WppEnabled>
       <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
+      <WppModuleName>VirtualLightSensorDriver</WppModuleName>
       <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
     </ClCompile>
-    <ClCompile Include="GeomagneticOrientationClient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="GravityVectorClient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="GyrClient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="linearaccelerometerclient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="MagClient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="PrxClient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
-    <ClCompile Include="relativefusionclient.cpp">
-      <WppEnabled>true</WppEnabled>
-      <WppDllMacro>true</WppDllMacro>
-      <WppModuleName>SensorsComboDriver</WppModuleName>
-      <WppScanConfigurationData>sensorstrace.h</WppScanConfigurationData>
-    </ClCompile>
+    <ClCompile Include="MappingFile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Clients.h" />
     <ClInclude Include="Driver.h" />
+    <ClInclude Include="MappingFile.h" />
     <ClInclude Include="SensorsTrace.h" />
+    <ClInclude Include="SharedMemory.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
