修改工程属性

--- a/Driver/VirtualLightSensorDriver.vcxproj
+++ b/Driver/VirtualLightSensorDriver.vcxproj
@@ -89,15 +89,19 @@
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>VirtualLightSensorDriver</TargetName>
+    <IncludePath>$(OutDir);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <TargetName>VirtualLightSensorDriver</TargetName>
+    <IncludePath>$(OutDir);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetName>VirtualLightSensorDriver</TargetName>
+    <IncludePath>$(OutDir);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetName>VirtualLightSensorDriver</TargetName>
+    <IncludePath>$(OutDir);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
