解决 inf2cat的问题

--- a/Driver/VirtualLightSensorDriver.vcxproj
+++ b/Driver/VirtualLightSensorDriver.vcxproj
@@ -90,6 +90,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>VirtualLightSensorDriver</TargetName>
     <IncludePath>$(OutDir);$(IncludePath)</IncludePath>
+    <Inf2CatUseLocalTime>true</Inf2CatUseLocalTime>
+    <Inf2CatVerbose>true</Inf2CatVerbose>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <TargetName>VirtualLightSensorDriver</TargetName>
@@ -98,6 +100,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetName>VirtualLightSensorDriver</TargetName>
     <IncludePath>$(OutDir);$(IncludePath)</IncludePath>
+    <Inf2CatUseLocalTime>true</Inf2CatUseLocalTime>
+    <Inf2CatVerbose>true</Inf2CatVerbose>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetName>VirtualLightSensorDriver</TargetName>
